--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-with, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Meu Portifólio</title>
+    <title>Meu Portfólio</title>
 </head>
+
 <body>
-    <img src="imagens projeto alura/avatar-perfil.png" alt="avatar da Fernanda_" srcset="">
-    <p>Eu sou Fernanda_</p>
-    <h1>Eu ensino Programação</h1>
-    <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!</p>
-    <p>Minhas habilidades</p>
-    <div>
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>Scratch</p>
-    </div>
+     <header class="container text-center">
+       <img src="imagens projeto alura/avatar-perfil.png" alt="avatar da Fernanda_" class="rounded-circle" width="150" heigth="150" srcset="">
+       <p class="lead">Eu sou Fernanda_</p>
+       <h1>Eu ensino Programação</h1>
+       <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!</p>
+       <p>Minhas habilidades</p>
+       <div>
+           <p class="badge bg-secondary">HTML</p>
+           <p class="badge bg-secondary">CSS</p>
+           <p class="badge bg-secondary">JavaScript</p>
+           <p class="badge bg-secondary">Scratch</p>
+       </div>
+     </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
